Bug 30986 - Porter crashes if it's destroyed immediately after trying to send a stanza
Summary: Porter crashes if it's destroyed immediately after trying to send a stanza
Status: RESOLVED FIXED
Alias: None
Product: Wocky
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://git.collabora.co.uk/?p=user/wj...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2010-10-19 08:57 UTC by Will Thompson
Modified: 2010-10-20 08:13 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Will Thompson 2010-10-19 08:57:09 UTC
If I tell the porter to send a stanza, then tear it down (without spinning the main loop!), and then spin the main loop a bit, it'll crash.

Patch to follow.
Comment 1 Nicolas Dufresne 2010-10-19 09:20:29 UTC
You should add a unit test too.
Comment 2 Will Thompson 2010-10-19 09:29:54 UTC
(In reply to comment #1)
> You should add a unit test too.

Of course. (I found it in the first place by writing a unit test.)
Comment 3 Nicolas Dufresne 2010-10-20 05:22:15 UTC
Looks perfectly good.
Comment 4 Will Thompson 2010-10-20 08:13:45 UTC
Thanks, merged!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.